--- a/ssrmu/Dockerfile
+++ b/ssrmu/Dockerfile
@@ -7,7 +7,7 @@ ENV NODE_ID=0                     \
     AUTOEXEC=0                    \
     ANTISSATTACK=0                \
     MU_SUFFIX=download.windowsupdate.com            \
-    MU_REGEX=%suffix       \
+    MU_REGEX=%5m.%suffix       \
     API_INTERFACE=glzjinmod       \
     WEBAPI_URL=https://zhaoj.in   \
     WEBAPI_TOKEN=glzjin           \
